# Player-Breeding-System

./: .blackboxrules  .gitignore  Cargo.toml  Dockerfile  Dockerfile.python_microservices  Dockerfile.rust  LICENSE  NEXT_STEPS.md  README.md  db-init.sql  docker-compose.test.yml  docker-compose.yml  requirements.txt  run_migrations.sh
migrations/: 0001_create_player_stats.sql  0002_create_achievements.sql  0003_create_financial_data.sql  0004_create_player_behavior.sql
python_microservices/: __init__.py  achievements_collector.py  ai_agent_service.py  behavior_collector.py  data_collector.py  financial_data_collector.py  genre_agents_service.py  ioana_ai_service.py  logging_setup.py  mao_ai_service.py  ml_models.py  test_achievements_collector.py  test_behavior_collector.py  test_data_collector.py  test_financial_data_collector.py  test_genre_agents_service.py  test_ioana_ai_service.py
scripts/: reset_test_db.sh  run_all.sh
src/: communication.rs  config.dev.toml  config.rs  config.toml  db.rs  logging.rs  main.rs  monitoring.rs  orchestration.rs  tests.rs
src/agents/: blade_ai.rs  genre_agents.rs  ioana_ai.rs  mao_ai.rs  mod.rs  together_ai.rs
tests/: together_ai_test.rs
