[package]
name = "player_breeding_system"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6", features = ["mysql", "runtime-tokio-native-tls", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
flexi_logger = "0.22"
anyhow = "1.0"
thiserror = "1.0"
toml = "0.5"
reqwest = { version = "0.11", features = ["json", "blocking"] }
async-trait = "0.1"
env_logger = "0.10"
warp = "0.3"
prometheus = "0.14"
lazy_static = "1.4"
